--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,19 +12,19 @@
 
 //-------------------- Base Colors --------------------//
 
-$theme-color:                   #2e69c5;
-$body-color:                    #000000;
-$heading-color:                 #000000;
-$third-color:                   #2e2e2e;
-$light:                         #f3eee8;
+$theme-color:                 #2e69c5;
+$body-color:                  #000000;
+$heading-color:               #000000;
+$third-color:                 #2e2e2e;
+$light:                       #f3eee8;
 
 
-$primary-color: #2e69c5;
-$secondary-color: #797979;
-$danger-color: #e3252e;
-$black-color: #000000;
-$light-grey: #e5e5e5;
-$grey: #cccccc;
+$primary-color: 			  #2e69c5;
+$secondary-color: 			  #797979;
+$danger-color: 				  #e3252e;
+$black-color: 				  #000000;
+$light-grey: 				  #e5e5e5;
+$grey: 						  #cccccc;
 
 //-------------------- Font Families --------------------//
 
@@ -38,59 +38,50 @@ $heading-font:                  'Inter', sans-serif;
 $primary:                       $theme-color;
 $secondary:                     $heading-color;
 
-// Spacer
-$spacer: 1rem !default;
-$spacers: (
-  0: 0,
-  1: $spacer / 4,
-  2: $spacer / 2,
-  3: $spacer,
-  4: $spacer * 1.25,
-  5: $spacer * 2,
-) !default;
-
 // Link
 $link-color:                    $heading-color;
-$link-decoration:				        none;
-$link-hover-color:				      $theme-color;
+$link-decoration:				none;
+$link-hover-color:				$theme-color;
 
 // Border
-$border-radius:					        0.3125rem;
+$border-radius:					0.3125rem;
 
 // Font sizes
 $font-size-base:                1rem;
 
 $h1-font-size:                	3.75rem;
-$h2-font-size:                	2.625rem;
+$h2-font-size:                	2.8125rem;
 $h3-font-size:                	1.5625rem;
 $h4-font-size:                	1.125rem;
 $h5-font-size:                	$font-size-base;
-$h6-font-size:               	  0.875rem;
+$h6-font-size:               	0.875rem;
 
 // Line Height
-$line-height-base:            	30 / 14;
+$line-height-base:            	1.5;
 $line-height-sm:              	30 / 16;
 $line-height-lg:              	30 / 12;
 
 // Buttons
-$btn-padding-y:              	  1.125rem;
-$btn-padding-x:              	  1.875rem;
-$btn-font-size:              	  0.75rem;
+$btn-font-family:               $heading-font;
+$btn-padding-y:              	1.125rem;
+$btn-padding-x:              	1.875rem;
+$btn-font-size:              	0.875rem;
 
 $btn-padding-y-lg:              1.5rem;
-$btn-padding-x-lg:              2.5rem;
+$btn-padding-x-lg:              4.5rem;
 $btn-font-size-lg:              0.875rem;
+$btn-font-weight:               600;
 
 $btn-line-height:               1;
 $btn-border-radius:             0;
 
 // Forms
 $input-color:                   $heading-color;
-$input-border-color:            $theme-color;
-$input-border-width:			      0;
+$input-border-color:            #e5e5e5;
+$input-border-width:			1px;
 $input-btn-focus-color-opacity: 1;
 
-$input-btn-padding-y:           1rem;
+$input-btn-padding-y:           1.25rem;
 $input-btn-padding-x:           1.5rem;
 $input-btn-font-size:           0.875rem;
 
@@ -108,8 +99,8 @@ $input-focus-border-color:      $theme-color;
 
 $topbar-height:                 2.8125rem;
 $topbar-line-height:            2.75rem;
-$topbar-color:                  #adacac;
-$topbar-hover-color:            #7c7b7a;
+$topbar-color:                #adacac;
+$topbar-hover-color:          #7c7b7a;
 
 
 //-------------------- Header --------------------//
@@ -122,8 +113,8 @@ $sticky-header-height:          3.75rem;
 
 //-------------------- Primary Menu --------------------//
 
-$primary-menu-padding:					2.8125rem;
-$sticky-menu-padding:					  1.40625rem;
+$primary-menu-padding:			2.8125rem;
+$sticky-menu-padding:			1.40625rem;
 
 $primary-menu-font:             $body-font;
 $primary-menu-font-weight:      400;
@@ -133,17 +124,20 @@ $primary-menu-font-color:       #000;
 $primary-menu-font-spacing:     0;
 
 // top Button
-$top-btn-font-size:        			0.875rem;
-$top-btn-font-color:       			#000;
+$top-btn-font-size:        		0.875rem;
+$top-btn-font-color:       	  #000;
 
 
 //-------------------- Section --------------------//
 
-$section-spacer:						    6.25rem;
+$section-spacer:				6.25rem;
 
+
+$container-max-widths: (
+  xl: 85%
+);
 
 //-------------------- Social Icons Colors --------------------//
-
 $facebook:                    #3B5998;
 $delicious:                   #205CC0;
 $paypal:                      #00588B;
