--- a/scss/demo/_blog.scss
+++ b/scss/demo/_blog.scss
@@ -11,6 +11,14 @@
 
 .post {
 	position: relative;
+	margin-bottom: 1.875rem;
+}
+
+.post-thumbnail {
+	img {
+		width: 100%;
+		height: auto;
+	}
 }
 
 .post-content {
@@ -18,62 +26,16 @@
 	padding-top: 1rem;
 }
 
-.post-date {
-	color: $theme-color;
-	font-family: $heading-font;
-	padding-bottom: 1rem;
-	font-size: $h6-font-size;
-	font-weight: 500;
-}
-
-.post-title {
-	line-height: 1.3;
-
-	@include media-breakpoint-up(xl) {
-		// width: 70%;
-	}
-}
 .entry-title {
-	h4 {
-		font-family: $body-font;
-		font-weight: 400;
-		line-height: $line-height-sm;		
-
-		a {
-			color: $heading-color;
-			
-			&:hover { color: $theme-color; }
-		}
-	}
+	font-size: 1.5625rem;
+	line-height: 1.5;		
 }
 
 .entry-meta {
-	list-style: none;
-	margin-bottom: 1.25rem;
-
-	li {
-		i {
-			color: rgba($theme-color, 0.5);
-			margin-right: 0.75rem;
-		}
-
-		a {
-			font-weight: 300;
-		}
+	a {
+		font-family: $heading-font;
+		font-size: 0.875rem;
+		color: $theme-color;
+		font-weight: 500;
 	}
-}
-
-.entry-content { 
-	position: relative; 
-	margin-bottom: 3.125rem;
-}
-
-.entry-link {
-	display: block;
-	color: $theme-color;
-	font-family: $body-font;
-	text-transform: uppercase;
-	font-size: $h6-font-size;
-	font-weight: 600;
-	line-height: $line-height-lg;
 }
