--- a/scss/demo/_footer.scss
+++ b/scss/demo/_footer.scss
@@ -16,29 +16,17 @@
 
 #footer {
 	background-color: $secondary;
-
-	hr {
-		background-color: #5c5b59;
-		margin: 2.5rem 0;
-	}
-
-	font-family: 'Roboto';
-
-	p {
-		color: white;
-		opacity: 1;
-	}
 }
 
 #footer-main {
 	background-color: #000;
-	padding-top: 3rem;
-	font-size: 0.685rem;
-	padding-bottom: 1rem;
+	padding-top: 5rem;
+	padding-bottom: 2rem;
+	border-bottom: 1px solid rgba($color: $white, $alpha: 0.2);
 }
 
 #footer-bottom {
-	padding-top: 1.375rem;
+	padding-top: 3.375rem;
 	padding-bottom: 1.375rem;
 }
 
