--- a/scss/demo/_form.scss
+++ b/scss/demo/_form.scss
@@ -14,6 +14,13 @@ textarea {
     resize: none;
 }
 
+.form-label {
+    font-size: 0.875rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    margin-bottom: 1.25rem;
+}
+
 // Required field
 .required-field {
     position: relative;
