--- a/scss/demo/_pagetitle.scss
+++ b/scss/demo/_pagetitle.scss
@@ -40,3 +40,22 @@
 		color: $primary;
 	}
 }
+
+.breadcrumb {
+	ul {
+		li {
+			a {
+				color: #7f7f7f;
+
+				&.active {
+					color: $theme-color;
+				}
+			}
+
+			i {
+				font-size: 0.5rem;
+				color: $theme-color;
+			}
+		}
+	}
+}
