--- a/scss/demo/_shop.scss
+++ b/scss/demo/_shop.scss
@@ -20,66 +20,29 @@
 -----------------------------------------------------------------*/
 .category {
 	position: relative;
-
-	&:hover {
-		.category-image {
-			position: relative;
-
-			&::after {
-				opacity: 50%;
-			}
-		}
-
-		.category-desc {
-			font-size: 2.25rem;
-		}
-
-		.category-reload {
-			opacity: 1;
-		}
-	}
+	border: 1px solid #e5e5e5;
 
 	.category-image {
-		position: relative;
+		position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
 
-		&::after {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
+		img {
 			width: 100%;
 			height: 100%;
-			background-color: black;
-			opacity: 20%;
-			transition: all 0.3s ease-in-out;
 		}
 	}
 
 	.category-desc {
-		color: white;
-		font-size: $h3-font-size;
-		font-weight: 700;
-		margin-bottom: 0;
-		position: absolute;
-		top: 20%;
-		width: 100%;			
-		@include transition(all 0.3s ease-in-out);
-		@include translateY(-50%);
+		position: relative;
+		padding: 5rem 3rem 3rem;
 	}
 
-	.category-reload {
-		position: absolute;
-		top: 50%;
-		left: 50%;		
-		background-color: transparent;
-		text-align: center;		
-		opacity: 1;
-		@include transition(all 0.3s ease-in-out);
-		@include translate3d(-50%, -50%, 0);
-
-		@media (min-width: 992px) {
-			opacity: 0;
-		}
+	.category-title {
+		font-size: 2.1875rem;
 	}
 }
 
@@ -89,37 +52,17 @@
 .product {
 	margin-bottom: 1.625rem;
 	position: relative;
-	font-family: $body-font;
-	line-height: 1 !important;
+	border: 1px solid #e5e5e5;
+	padding: 2.25rem;
 
 	.product-image {
 		position: relative;
 		text-align: center;
 
-		a {
-			display: inline-block;
+		img {
 			width: 100%;
-			position: relative;
-		}
-
-		> a:nth-of-type(2) {
-			background-color: $white;
-			opacity: 0;
-			position: absolute;
-			z-index: -1;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			overflow: hidden;
-			@include transition(all 0.3s ease-in-out);
-		}
-
-		&:hover {
-			> a:nth-of-type(2) {
-				z-index: 1;
-				opacity: 1;
-			}
+			height: auto;
+			max-height: 18rem;
 		}
 	}
 
@@ -128,192 +71,128 @@
 	}
 
 	.product-title {
-		color: #2f363a;	
-		font-family: $body-font;
-		font-size: $h4-font-size;
-		font-weight: 400;
-		line-height: $h4-font-size;
-		display: inline-block;
-		margin-bottom: 0;
-	}
-
-	.add-to-wishlist {
-		i {
-			color: #2f363a;	
-			margin-right: 0.4rem;
-			font-size: 1.35rem;
-			@include transition(all 0.3s ease-in-out);
-
-			&:hover {
-				color: $primary;
-			}
-		}
+		font-size: 1.5625rem;
 	}
 
 	.product-price {
 		color: #2f363a;
-		font-family: $body-font;
-		font-size: $h3-font-size;
-		font-weight: 400;
-		line-height: $line-height-sm;
-		display: flex;
-		align-items: center;
+		font-family: $heading-font;
+		font-size: 1.25rem;
+		font-weight: 600;
 
 		del {
-			font-size: $h5-font-size;
-			color: #d4c4b1;
-			padding-left: 0.5rem;
+			font-size: 0.875rem;
+			font-weight: 500;
+			color: #a3a3a3;
+			padding-left: 0.25rem;
 		}
 	}
 
 	.product-info {
-		color: rgba($theme-color, 0.5);
+		font-size: 0.75rem;
+		color: #7f7f7f;
+	}
+	
+	.product-rating {
+		i {
+			color: $theme-color;
+		}
 	}
 
-	.product-categories {
-		a {
-			color: #d4c4b1;
-			font-family: $body-font;
-			font-size: 0.875rem;
-			font-weight: 400;
-			line-height: $line-height-base;
-		}		
-	}
-
-	.onnew {
+	.onnew, .onsale, .ontop {
 		position: absolute;
-		top: 0.7rem;
-		right: 0.7rem;
-		color: white;
+		top: 1.5rem;
+		right: 1.5rem;
+		color: #fff;
 		font-family: $heading-font;
-		font-size: 0.9375rem;
+		font-size: .875rem;
+		font-weight: 500;
 		display: inline-block;
-		width: 3.2rem;
-		height: 3.2rem;
-		border-radius: 1.6rem;
-		background-color: #735244;
-		line-height: 3.2rem;
+		width: 4.5rem;
+		height: 2.5rem;
+		line-height: 2.5rem;
 		text-align: center;
 		z-index: 2;
+		text-transform: uppercase;
+	}
+
+	.onnew, .ontop {
+		background-color: $theme-color;
 	}
 
 	.onsale {
-		position: absolute;
-		top: 0.7rem;
-		right: 0.7rem;
-		color: white;
-		font-family: $heading-font;
-		font-size: 0.9375rem;
-		display: inline-block;
-		width: 3.2rem;
-		height: 3.2rem;
-		border-radius: 1.6rem;
-		background-color: $primary;
-		line-height: 3.2rem;
-		text-align: center;
-		z-index: 2;
+		background-color: #e3252e;
+		height: 1.875rem;
+		line-height: 2rem;
 	}
 
 	.add-to-cart {
-		a {
-			color: $primary;
-			display: inline-block;
-		
-			.cart-description {
-				font-size: $h5-font-size;
-				vertical-align: middle;
-				margin-right: 0.6rem;
-			}
-	
-			.cart-icon {
-				font-size: $h2-font-size;
-				vertical-align: middle;
-				line-height: $h2-font-size;
-			}
-		}
+		color: $white;
+		text-transform: uppercase;
+	}
+
+	.add-to-wishlist {
+		position: absolute;
+		top: 0;
+		left: 0;
+		color: $dark;
 	}
 }
 
 .ads {
 	position: relative;
-	display: block;
+    display: block;
+	margin-bottom: 1.5rem;
 
-	.ads-content {
-		position: absolute;
+	.ads-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
 
-		&.ads-large {
-			right: 5rem;
-			top: 3.5rem;
-			text-align: right;
-			max-width: 9rem;
+        .ads-bg-img {
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-size: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+    }
+
+	.ads-body {
+        position: relative;
+        z-index: 1;
+    }
+
+	&.ads1 {
+		.ads-body {
+			padding: 4rem;
+			padding-bottom: 22.15rem;
 		}
+	}
 
-		&.ads-small {
-			top: 50%;
-			left: 0;
-			@include translateY(-50%);
+	&.ads2 {
+		.ads-body {
+			padding: 7rem 3rem;
 
-			h4 {
-				font-size: 1.125rem;
-				line-height: 1.25;
+			h3 {
+				font-size: 2.1875rem;
 			}
 		}
+	}
 
-		&.ads-normal {
-			right: 5rem;
-			top: 0;
-			text-align: right;
-			height: 100%;
+	&.ads3 {
+		.ads-body {
+			padding: 7rem 3rem 8rem;
 
-			.ads-top {
-				padding-top: 100%;
+			h3 {
+				font-size: 2.1875rem;
 			}
 		}
-	}
-
-	.ads-content-top {
-		position: absolute;
-		right: 5rem;
-		top: 20%;
-		text-align: right;
-		@include translateY(-50%);
-	}
-
-	.ads-content-bottom {
-		position: absolute;
-		right: 5rem;
-		top: 72%;
-		text-align: right;
-		@include translateY(-50%);
-		max-width: 10.3125rem;
-
-		h4 {
-			font-size: 1.5rem;
-			font-family: $body-font;
-			color: white;
-			line-height: 1.5;
-		}
-	}
-}
-
-[data-cart-items] {
-    position: relative;
-    display: inline-block;
-
-	&::before {
-		content: attr(data-cart-items);
-		position: absolute;
-		top: -.5rem;
-		right: -.75rem;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 1rem;
-		height: 1rem;
-		font-size: 0.625rem;
-		font-weight: 500;
-		border-radius: 50%;
-		background-color: $theme-color;
-		color: $white;
 	}
 }
