--- a/scss/demo/shortcodes/_icon-box.scss
+++ b/scss/demo/shortcodes/_icon-box.scss
@@ -11,29 +11,12 @@
 
 
 .icon-box {
-    display: flex;
-	align-items: center;
-	margin-bottom: 1.5rem;
-
-	.icon-wrapper {
-		width: 2.5rem;
-		line-height: 1;
-
-		i {
-			color: #d6ccca;
-			font-size: 1.125rem;
-		}
-	}
+	display: block;
 
 	.icon-header {
-		display: flex;
-		align-items: center;
-		line-height: 1;
-
-		h4 {
-			font-weight: 300;
-			margin-bottom: 0;
-			width: 9rem;			
+		span {
+			color: #878787;
+			font-size: 0.875rem;
 		}
 	}
 }
